--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,25 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+label {
+  font-size: 12px;
+  color: darkslategray;
+  padding: 4px;
+}
+
+input[type="range"] {
+    vertical-align: middle;
+}
+
+button {
+    margin: 1px 4px;
+  }
+
+input {
+  margin-right: 6px;
+}
+
+h1 {
+  padding: 0px 15px;
+  font-size: 31px;
 }
